--- a/site-de-vendas/private/detalhes-curso-2.html
+++ b/site-de-vendas/private/detalhes-curso-2.html
@@ -28,10 +28,9 @@
             <label for="quantidade-vagas">Quantidade:</label>
             <input type="number" id="quantidade-vagas" value="1" min="1" max="12">
             
-            <h3>Valor Total: <span id="valor-total">R$ 450,00</span></h3>
+            <h3>Valor Total: <span id="valor-total" value=450>R$ 450,00</span></h3>
             
             <a href="index.html">Voltar</a>
-            <button id="comprar-button">Comprar Vagas</button>
         </section>
     </div>
 
